postgres migration adding a bunch of features